--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "material-ui": "^0.20.0",
     "react": "^16.0.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17",
-    "react-router": "^3.0.5"
+    "react-router": "^3.0.5",
+    "react-scripts": "1.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
